# gmail_project-part3

./: .gitignore  README.md  details.txt  docker-compose.yml
blacklist/: Dockerfile  docker-compose.yml
blacklist/data/: data.txt
blacklist/src/: AddCommand.cpp  AddCommand.h  App.cpp  App.h  AppTest.cpp  BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  CheckCommand.cpp  CheckCommand.h  Client.py  CommandTest.cpp  ConsoleMenu.cpp  ConsoleMenu.h  DataStructureTest.cpp  Deadpool.cpp  Deadpool.h  DeleteCommand.cpp  DeleteCommand.h  HashFunctions.cpp  HashFunctions.h  HashFunctionsTestManual.cpp  ICommand.h  IDataStructure.h  IIO.h  IMenu.h  IOTest.cpp  ISetup.h  LineSetup.cpp  LineSetup.h  Main.cpp  MenuTest.cpp  SetupTest.cpp  SocketIO.cpp  SocketIO.h  StreamIO.cpp  StreamIO.h
blacklist/src/exe/: main
mailbox/: Dockerfile  Dockerfile2
mailbox/src/: app.js  examples.txt  gmail_data.txt  package-lock.json  package.json
mailbox/src/controllers/: blacklist.js  labels.js  mails.js  tokens.js  users.js
mailbox/src/models/: blacklist.js  labels.js  mails.js  users.js
mailbox/src/routes/: blacklist.js  labels.js  mails.js  tokens.js  users.js
proofs/: Project-progress-part2.docx
